Bugfix #3285704: Translations issues with undefined msgid in .po files

--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -835,7 +835,7 @@ msgstr "_RELOAD_REQUIRED"
 msgid "_REMOVE_LOG_MINUTE"
 msgstr "_REMOVE_LOG_MINUTE"
 
-msgid "_REPETITION_D"
+msgid "_REPETITION_N"
 msgstr "_REPETITION_N"
 
 msgid "_REPORT"
@@ -1354,3 +1354,29 @@ msgstr "_YOUR user can only view %d minutes of logs"
 msgid "_MSG_WIZARD_MSGS_LIST_LIMITED_TO"
 msgstr "_MSG_WIZARD_MSGS_LIST_LIMITED_TO %d"
 
+msgid "_TOOLTIP_ALERT_MSG"
+msgstr "_TOOLTIP_ALERT_MSG"
+
+msgid "_TOOLTIP_DEVICE_STATUS"
+msgstr "_TOOLTIP_DEVICE_STATUS"
+
+msgid "_TOOLTIP_SYSTEM_DB"
+msgstr "_TOOLTIP_SYSTEM_DB"
+
+msgid "_TOOLTIP_SYSTEM_JABBER"
+msgstr "_TOOLTIP_SYSTEM_JABBER"
+
+msgid "_TOOLTIP_SYSTEM_LDAP"
+msgstr "_TOOLTIP_SYSTEM_LDAP"
+
+msgid "_TOOLTIP_SYSTEM_NSCA"
+msgstr "_TOOLTIP_SYSTEM_NSCA"
+
+msgid "_TOOLTIP_SYSTEM_PROXY"
+msgstr "_TOOLTIP_SYSTEM_PROXY"
+
+msgid "_TOOLTIP_SYSTEM_SMTP"
+msgstr "_TOOLTIP_SYSTEM_SMTP"
+
+msgid "_TOOLTIP_SYSTEM_ZABBIX"
+msgstr "_TOOLTIP_SYSTEM_ZABBIX"
