--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -1201,6 +1201,9 @@ msgstr "Kontaktinformationen bentigen mindestens die ID und Email/IM !"
 msgid "_MSG_CONTACT_ME"
 msgstr "Fuer alles Andere erreichen Sie mich unter octo.devel@gmail.com"
 
+msgid "_MSG_DEVICEGROUP_ALREADY_EXISTS"
+msgstr "_MSG_DEVICEGROUP_ALREADY_EXISTS"
+
 msgid "_MSG_DYNAMIC_ALERT_CREATION"
 msgstr "Dynamische Alarm Erstellung"
 
