--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -517,6 +517,12 @@ msgstr "Building"
 msgid "_CITY"
 msgstr "City"
 
+msgid "_COMPONENT_NAME"
+msgstr "Component Name"
+
+msgid "_CONNECTION_TYPE"
+msgstr "Connection Type"
+
 msgid "_CONTACTS"
 msgstr "Contacts"
 
