--- a/usr/share/aat/Translations/it.po
+++ b/usr/share/aat/Translations/it.po
@@ -517,6 +517,12 @@ msgstr "Costgruzione"
 msgid "_CITY"
 msgstr "Città"
 
+msgid "_COMPONENT_NAME"
+msgstr "_COMPONENT_NAME"
+
+msgid "_CONNECTION_TYPE"
+msgstr "_CONNECTION_TYPE"
+
 msgid "_CONTACTS"
 msgstr "Contatti"
 
