--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -517,6 +517,12 @@ msgstr "Prédio"
 msgid "_CITY"
 msgstr "Cidade"
 
+msgid "_COMPONENT_NAME"
+msgstr "_COMPONENT_NAME"
+
+msgid "_CONNECTION_TYPE"
+msgstr "_CONNECTION_TYPE"
+
 msgid "_CONTACTS"
 msgstr "Contatos"
 
