--- a/usr/share/aat/Translations/ru.po
+++ b/usr/share/aat/Translations/ru.po
@@ -517,6 +517,12 @@ msgstr "Здание"
 msgid "_CITY"
 msgstr "Город"
 
+msgid "_COMPONENT_NAME"
+msgstr "_COMPONENT_NAME"
+
+msgid "_CONNECTION_TYPE"
+msgstr "_CONNECTION_TYPE"
+
 msgid "_CONTACTS"
 msgstr "Контакты"
 
