Fixing Translations issues

--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -334,6 +334,9 @@ msgstr "Update"
 msgid "_USER"
 msgstr "User"
 
+msgid "_USER_EDIT"
+msgstr "Edit User Configuration"
+
 msgid "_USERS"
 msgstr "Users"
 
