--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -334,6 +334,9 @@ msgstr "Atualiza"
 msgid "_USER"
 msgstr "Usuário"
 
+msgid "_USER_EDIT"
+msgstr "_USER_EDIT"
+
 msgid "_USERS"
 msgstr "Usuários"
 
