--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -334,6 +334,9 @@ msgstr "Update"
 msgid "_USER"
 msgstr "Benutzer"
 
+msgid "_USER_EDIT"
+msgstr "_USER_EDIT"
+
 msgid "_USERS"
 msgstr "Benutzer"
 
