--- a/usr/share/aat/Translations/es.po
+++ b/usr/share/aat/Translations/es.po
@@ -334,6 +334,9 @@ msgstr "Actualizar"
 msgid "_USER"
 msgstr "Usuario"
 
+msgid "_USER_EDIT"
+msgstr "_USER_EDIT"
+
 msgid "_USERS"
 msgstr "Usuarios"
 
