--- a/usr/share/aat/Translations/it.po
+++ b/usr/share/aat/Translations/it.po
@@ -334,6 +334,9 @@ msgstr "Aggiorna"
 msgid "_USER"
 msgstr "Utente"
 
+msgid "_USER_EDIT"
+msgstr "_USER_EDIT"
+
 msgid "_USERS"
 msgstr "Utenti"
 
